--- a/packages/ros/Dockerfile.ros2
+++ b/packages/ros/Dockerfile.ros2
@@ -16,32 +16,36 @@ ENV ROS_DISTRO=${ROS_VERSION} \
     
 SHELL ["/bin/bash", "-c"] 
 
-# set Python3 as default
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+ENV DEBIAN_FRONTEND=noninteractive
 
-# Numpy 2.0
-RUN python3 -m pip install "numpy>=2.0.0"
-RUN python3 -c "import numpy; print('NumPy version:', numpy.__version__)"
+# Set locale
+RUN apt-get update && apt-get install -y locales
+RUN locale-gen en_US en_US.UTF-8 && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+ENV LANG=en_US.UTF-8
 
-# build ROS from source
-COPY ros2_build.sh /tmp/ros2_build.sh
-RUN /tmp/ros2_build.sh || touch /tmp/.ros.build.failed
+# Install base dependencies 
+RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg2 \
+    lsb-release \
+    python3-pip \
+    software-properties-common \
+    build-essential \
+    cmake \
+    git 
 
-# this retains the stage above for debugging on build failure
-RUN if [ -f /tmp/.ros.build.failed ]; then \
-      echo "ROS ${ROS_DISTRO} build failed!"; \
-      exit 1; \
-    fi
+# Add the ROS2 repository
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
 
-# on 24.04, the older colcon-argcomplete that ROS installs conflicts with the venv one
-RUN if [ $(lsb_release -rs) = '24.04' ]; then \ 
-      echo "#!/usr/bin/env bash" > "/opt/venv/bin/register-python-argcomplete" ; \
-    fi
+# Update and install ROS2 Humble
+RUN apt-get update && apt-get install -y \
+    ros-humble-ros-base \
+    ros-dev-tools \
+    python3-colcon-common-extensions
 
-# Set the default DDS middleware to cyclonedds
-# https://github.com/ros2/rclcpp/issues/1335
-# https://docs.ros.org/en/jazzy/Installation/DDS-Implementations/Working-with-eProsima-Fast-DDS.html
-#ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+# Initialize rosdep
+RUN rosdep init && rosdep update
 
 # commands will be appended/run by the entrypoint which sources the ROS environment
 COPY ros_entrypoint.sh ros2_install.sh /
